Copy .awk and .sed files from masterfiles to inputs
awk and sed can be used as parts of command pipelines triggered
from policy.

Also make sure we include .sed and .awk files from 'templates'
and 'cfe_internal' directory trees in our packages and tarballs.

Changelog: Title
Ticket: ENT-4839

--- a/controls/update_def.cf.in
+++ b/controls/update_def.cf.in
@@ -78,7 +78,7 @@ bundle common update_def
       # (from the augments_file).
       "input_name_patterns"
         slist => { ".*\.cf",".*\.dat",".*\.txt", ".*\.conf", ".*\.mustache",
-                   ".*\.sh", ".*\.pl", ".*\.py", ".*\.rb",
+                   ".*\.sh", ".*\.pl", ".*\.py", ".*\.rb", ".*\.sed", ".*\.awk",
                    "cf_promises_release_id", ".*\.json", ".*\.yaml" },
         comment => "Filename patterns to match when updating the policy
                     (see update/update_policy.cf)",
