Fix Travis build
Issue was that we didn't truncate string properly. This string:
"cfengine-….deb< cfengine-….deb<"
should be truncated to this:
"cfengine-….deb"
Instead, it currently was truncated to this:
"cfengine-….deb< cfengine-….deb"

(cherry picked from commit b174ca24c57b66b26f2662fd1ef283dde144cf88)

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ matrix:
         - DATE="${DATE#*>}"
         - DIR_URL="https://builds.cfengine.com/pub/nightly/master/$DATE/output/PACKAGES_x86_64_linux_debian_7"
         - FILE=`wget --no-check-certificate -qO- "$DIR_URL" | grep -o '[^>]*\.deb<'`
-        - FILE="${FILE%<}"
+        - FILE="${FILE%%<*}"
         - wget --no-check-certificate $DIR_URL/$FILE
         - sudo dpkg -i $FILE
 
