yum package_module gets updates available from online repos if local cache fails
When the yum cache has not been populated, list-updates-local fails to return
any package updates. This change tries to use the local cache if requested, but
will fall back to getting data from the network which will result in the cache
being re-generated.

Without this change, something must first populate the yum cache (manually
installing something, running yum makecache, a promise to install a package)
before the agent will be able to get a list of updates available.

Changelog: Title
Ticket: CFE-3094

--- a/modules/packages/yum.in
+++ b/modules/packages/yum.in
@@ -123,6 +123,11 @@ def list_updates(online):
     # 0 means no updates
     # 1 means there was an error
     # 100 means that there are available updates
+    if process.returncode == 1 and not online:
+        # If we get an error when listing local updates, try again using the
+        # online method, so that the cache is generated
+        process = subprocess_Popen([yum_cmd] + yum_options + ["check-update"], stdout=subprocess.PIPE)
+        (stdoutdata, _) = process.communicate()
     if process.returncode != 100:
         # either there were no updates or error happened
         # Nothing to do for us here anyway
