ENT-4874: Changed FR policy to honor target_state properly
Also added a unit test at tests/unit/test_federation_policy

Changelog: title
(cherry picked from commit e4a9bb31844dbc890209bde042fa3bf91eda1272)

--- a/tests/unit/Makefile.am
+++ b/tests/unit/Makefile.am
@@ -4,7 +4,8 @@ check_SCRIPTS =
 if LINUX
 check_SCRIPTS += \
 	test_package_module_apt_get \
-	test_package_module_yum
+	test_package_module_yum \
+	test_federation_policy
 endif
 
 if HAVE_SHUNIT2
