Support using Python 3 for package module tests
Some systems don't have Python 2 and the /usr/bin/python
executable/symlink. We need to support such system as well as
running tests on them.

--- a/configure.ac
+++ b/configure.ac
@@ -245,6 +245,7 @@ AC_CONFIG_FILES([Makefile
                 modules/packages/zypper
                 promises.cf
                 standalone_self_upgrade.cf
+                tests/Makefile
                 tests/acceptance/Makefile
                 tests/unit/Makefile
 ])
