Fixed typo in DEBUG report
This fixes a typo so that the DEBUG report to show the used curl commands for
bulk downloading enterprise binaries will work correctly.

Ticket: ENT-5006
Changelog: None
(cherry picked from commit 632396c02a764a2c35d0b680dcaf63f77e5e7934)

--- a/standalone_self_upgrade.cf.in
+++ b/standalone_self_upgrade.cf.in
@@ -580,7 +580,7 @@ bundle agent cfengine_master_software_content
 
   reports:
     DEBUG|DEBUG_cfengine_master_software_content::
-      "curl -s $(base_url)/$(dir[$(i)])/$(cfengine_package_names.pkg[$(i)]) --output $(download_dir)/$(i)/$(cfengine_pacakge_names.pkg[$(i)])";
+      "curl -s $(base_url)/$(dir[$(i)])/$(cfengine_package_names.pkg[$(i)]) --output $(download_dir)/$(i)/$(cfengine_package_names.pkg[$(i)])";
 }
 
 bundle edit_line u_backup_script
