Excluded Enterprise federation policy parsing on incompatible versions
The federated reporting in CFEngine Enterprise leverages features that are
unavailable in versions older than 3.12.0. This change prevents the federation
policy from being parsed and generating errors on older versions (both from
including policy containing features not present, and from specifying a bundle
that is not present when the federation policy is not parsed.

3.10.x was not targeted for support because Federated Reporting was targeted for
supported use starting in 3.15.0 as 3.10.x ended it's standard support life.

Ticket: CFE-3193
Changelog: Title
(cherry picked from commit 10220918336f49acd08a04c4d2695a3169014e3a)

--- a/promises.cf.in
+++ b/promises.cf.in
@@ -183,10 +183,11 @@ bundle common cfe_internal_inputs
         comment => "Policy relating to CFEngine Enterprise Hub, for example
                     software updates, webserver configuration, and alerts";
 
+@if minimum_version(3.12.0)
       "input[enterprise_hub_federation]"
         string => "cfe_internal/enterprise/federation/federation.cf",
         comment => "Policy relating to CFEngine Federated Reporting";
-
+@endif
 
     enterprise_edition::
 
