--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,16 @@ matrix:
         - sudo dpkg -i $FILE
 
     # JOB 3
+    - env: CF_VERSION=3.15.x
+      addons:
+        apt:
+          sources:
+            - sourceline: "deb https://cfengine-package-repos.s3.amazonaws.com/pub/apt/packages stable main"
+              key_url: https://cfengine-package-repos.s3.amazonaws.com/pub/gpg.key
+          packages:
+            - cfengine-community=3.15.*
+
+    # JOB 4
     - env: CF_VERSION=3.12.x
       addons:
         apt:
@@ -39,7 +49,7 @@ matrix:
           packages:
             - cfengine-community=3.12.*
 
-    # JOB 4
+    # JOB 5
     - env: CF_VERSION=3.10.x
       addons:
         apt:
