Use new determine-version.sh system from core
Changelog: None
Ticket: ENT-5304
Signed-off-by: Ole Herman Schumacher Elgesem <ole@northern.tech>
(cherry picked from commit bb9cf9d6b518b9719742e79b9a05ca02b41b39c0)

--- a/.travis.yml
+++ b/.travis.yml
@@ -62,7 +62,7 @@ script:
       exit;
   fi
   # Fetch the tags from upstream, even if we are running on a foreign clone;
-  # Needed for determine-version.py to work
+  # Needed for determine-version.sh to work
 - git remote add upstream https://github.com/cfengine/masterfiles.git;
   git fetch upstream 'refs/tags/*:refs/tags/*';
 - ./autogen.sh --without-core --prefix=$INSTDIR
