--- a/standalone_self_upgrade.cf.in
+++ b/standalone_self_upgrade.cf.in
@@ -440,37 +440,8 @@ bundle common cfengine_package_names
       "pkg[ubuntu_18_x86_64]" string => "$(pkg[debian_7_x86_64])";
 
       # 32bit DEBs
-      "pkg[debian_4_i386]" string => "$(pkg_name)_$(pkg_version)-$(pkg_release)_i386-debian4.deb";
-      "pkg[debian_4_i586]" string => "$(pkg[debian_4_i386])";
-      "pkg[debian_4_i686]" string => "$(pkg[debian_4_i386])";
-      "pkg[debian_5_i386]" string => "$(pkg[debian_4_i386])";
-      "pkg[debian_5_i586]" string => "$(pkg[debian_4_i386])";
-      "pkg[debian_5_i686]" string => "$(pkg[debian_4_i386])";
-      "pkg[debian_6_i386]" string => "$(pkg[debian_4_i386])";
-      "pkg[debian_6_i586]" string => "$(pkg[debian_4_i386])";
-      "pkg[debian_6_i686]" string => "$(pkg[debian_4_i386])";
-      "pkg[debian_7_i386]" string => "$(pkg[debian_4_i386])";
-      "pkg[debian_7_i586]" string => "$(pkg[debian_4_i386])";
-      "pkg[debian_7_i686]" string => "$(pkg[debian_4_i386])";
-      "pkg[debian_8_i386]" string => "$(pkg[debian_4_i386])";
-      "pkg[debian_8_i586]" string => "$(pkg[debian_4_i386])";
-      "pkg[debian_8_i686]" string => "$(pkg[debian_4_i386])";
-      "pkg[debian_9_i386]" string => "$(pkg[debian_4_i386])";
-      "pkg[debian_9_i586]" string => "$(pkg[debian_4_i386])";
-      "pkg[debian_9_i686]" string => "$(pkg[debian_4_i386])";
-      "pkg[ubuntu_12_i386]" string => "$(pkg[debian_4_i386])";
-      "pkg[ubuntu_12_i586]" string => "$(pkg[debian_4_i386])";
-      "pkg[ubuntu_12_i686]" string => "$(pkg[debian_4_i386])";
-      "pkg[ubuntu_14_i386]" string => "$(pkg[debian_4_i386])";
-      "pkg[ubuntu_14_i586]" string => "$(pkg[debian_4_i386])";
-      "pkg[ubuntu_14_i686]" string => "$(pkg[debian_4_i386])";
-      "pkg[ubuntu_16_i386]" string => "$(pkg[debian_4_i386])";
-      "pkg[ubuntu_16_i586]" string => "$(pkg[debian_4_i386])";
-      "pkg[ubuntu_16_i686]" string => "$(pkg[debian_4_i386])";
-      "pkg[ubuntu_18_i386]" string => "$(pkg[debian_4_i386])";
-      "pkg[ubuntu_18_i586]" string => "$(pkg[debian_4_i386])";
-      "pkg[ubuntu_18_i686]" string => "$(pkg[debian_4_i386])";
 
+      "pkg[$(cfengine_master_software_content._deb_dists_i386)_$(cfengine_master_software_content._deb_arches_i386)]" string => "$(pkg_name)_$(pkg_version)-$(pkg_release).debian7_i386.deb";
 
       "my_pkg"
         string => "$(pkg[$(sys.flavor)_$(sys.arch)])",
