--- a/promises.cf.in
+++ b/promises.cf.in
@@ -107,6 +107,8 @@ body common control
           package_inventory => { $(package_module_knowledge.platform_default) };
           package_module => $(package_module_knowledge.platform_default);
 @endif
+    termux::
+          package_module => $(package_module_knowledge.platform_default);
 
     any::
         ignore_missing_bundles => "$(def.control_common_ignore_missing_bundles)";
