Report when running tests with real binaries

--- a/modules/packages/yum.in
+++ b/modules/packages/yum.in
@@ -15,6 +15,8 @@ yum_options = ["--quiet", "-y"]
 
 NULLFILE = open(os.devnull, 'w')
 
+if 'CFENGINE_TEST_RPM_CMD' not in os.environ or 'CFENGINE_TEST_YUM_CMD' not in os.environ:
+    sys.stderr.write("running rpm with real binary\n")
 
 redirection_is_broken_cached = -1
 
