--- a/promises.cf.in
+++ b/promises.cf.in
@@ -110,6 +110,10 @@ body common control
     termux::
           package_module => $(package_module_knowledge.platform_default);
 
+    alpinelinux::
+          package_module => $(package_module_knowledge.platform_default);
+
+
     any::
         ignore_missing_bundles => "$(def.control_common_ignore_missing_bundles)";
         ignore_missing_inputs => "$(def.control_common_ignore_missing_inputs)";
