--- a/promises.cf.in
+++ b/promises.cf.in
@@ -345,14 +345,14 @@ bundle common services_autorun
   reports:
     DEBUG|DEBUG_services_autorun::
       "DEBUG $(this.bundle): Services Autorun Disabled"
-        ifvarclass => "!services_autorun";
+        if => "!services_autorun";
 
       "DEBUG $(this.bundle): Services Autorun Enabled"
-        ifvarclass => "services_autorun";
+        if => "services_autorun";
 
       "DEBUG $(this.bundle): adding input='$(inputs)'"
-        ifvarclass => isvariable("inputs");
+        if => isvariable("inputs");
 
       "DEBUG $(this.bundle): adding input='$(found_inputs)'"
-        ifvarclass => isvariable("found_inputs");
+        if => isvariable("found_inputs");
 }
