--- a/standalone_self_upgrade.cf.in
+++ b/standalone_self_upgrade.cf.in
@@ -342,7 +342,7 @@ bundle agent cfengine_software_version_packages1
       comment => "Create a backup script for cf-upgrade",
       handle => "cfe_internal_update_bins_files_backup_script",
       create => "true",
-      ifvarclass => "!windows",
+      if => "!windows",
       edit_defaults => u_empty_no_backup,
       edit_line => u_backup_script,
       perms => u_m("0755");
@@ -351,7 +351,7 @@ bundle agent cfengine_software_version_packages1
       comment => "Create an install script for cf-upgrade",
       handle => "cfe_internal_update_bins_files_install_script",
       create => "true",
-      ifvarclass => "!windows",
+      if => "!windows",
       edit_defaults => u_empty_no_backup,
       edit_line => u_install_script,
       perms => u_m("0755");
@@ -363,7 +363,7 @@ bundle agent cfengine_software_version_packages1
       edit_defaults => u_empty_no_backup,
       edit_line => u_admin_file,
       perms => u_m("0644"),
-      ifvarclass => "solarisx86|solaris";
+      if => "solarisx86|solaris";
 
   packages:
     # Only non policy hubs running are allowed to self upgrade
